<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.termsofuse.TermsOfUseFragment"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_use_header"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term1_text"
        android:textSize="25sp"
        android:layout_marginTop="170dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term2_text"
        android:textSize="25sp"
        android:layout_marginTop="305dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term3_text"
        android:textSize="25sp"
        android:layout_marginTop="440dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term4_text"
        android:textSize="25sp"
        android:layout_marginTop="750dp"/>

</FrameLayout>