<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="listInfoViewModel"
            type="edu.chnu.mobidev_native.viewmodel.listinfo.ListInfoViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_normal">

        <TextView
            android:id="@+id/add_purchase_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{listInfoViewModel != null ? listInfoViewModel.listWithItems.shoppingList.listName : "not found"}'
            android:textAppearance="?textAppearanceHeadline4"
            android:layout_gravity="center_horizontal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/hr_height"
            android:background="@color/hr_color"
            android:layout_marginTop="@dimen/hr_margin_top"/>

        <TextView
            android:id="@+id/desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_label_text"
            android:textSize="@dimen/basic_info_text_size"
            android:layout_marginTop="@dimen/margin_top_level_2"/>

        <EditText
            android:id="@+id/edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/basic_info_text_size"
            android:layout_marginTop="@dimen/edit_desc_margin_top"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="labelFor"/>

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_label_text"
            android:textSize="@dimen/basic_info_text_size"
            android:layout_marginTop="@dimen/price_label_margin_top"/>

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/basic_info_text_size"
            android:inputType="numberDecimal"
            android:layout_marginTop="@dimen/edit_price_margin_top"
            android:importantForAutofill="no"
            tools:ignore="labelFor"/>

        <Button
            android:id="@+id/send_item_created_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_item_created_btn"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/send_item_created_btn_margin_top"
            tools:ignore="rtlHardCoded"/>

    </FrameLayout>
</layout>